# stm32l4-bootloader-test

./: .gitignore  README.md
application/: Cargo.toml  memory.x
application/.cargo/: config
application/src/: main.rs
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config
bootloader/src/: main.rs
