[package]
name = "bootloader"
version = "0.1.0"
authors = ["Robert Hanyecz <robert@hanye.cz"]
edition = "2021"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-semihosting = "0.6.0"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l433" ] }




[[bin]]
name = "bootloader"
test = false
bench = false

[profile.release]
codegen-units = 1
lto = true
